--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 
     <div id="panel">
-        <div id="msg">ANSWER NOW</div>
+        <div id="msg">YOUR ANSWER</div>
         <div id="time">9</div>
         <span id="abort"><a href="index2.html">YES</a></span>
         <span id="no">NO</span>
@@ -57,7 +57,7 @@
     <div id="mute"></div>
 
     <audio id="alarm">
-        <source src="https://josetxu.com/demos/sounds/self-destruct-alarm-count.mp3" type="audio/mpeg">
+        <source src="https://nhacchuonghinhnen.com/nhac-chuong-canh-bao-warning.html" type="audio/mpeg">
     </audio>
     
     <script src="main.js"></script>
