--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div id="mute"></div>
 
     <audio id="alarm">
-        <source src="https://josetxu.com/demos/sounds/self-destruct-alarm-count.mp3" type="audio/mpeg">
+        <source src="destruct.mp3" autoplay controls hidden>
     </audio>
     
     <script src="main.js"></script>
