--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div id="mute"></div>
 
     <audio id="alarm">
-        <source src="destruct.mp3" autoplay controls hidden>
+        <source src="security.mp3" autoplay controls hidden>
     </audio>
     
     <script src="main.js"></script>
